versioned_docs/version-2.18/reference/subsystems/pyright.mdx
---
title: pyright
description: |
  The Pyright utility for typechecking Python code (https://github.com/microsoft/pyright).
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The Pyright utility for typechecking Python code (https://github.com/microsoft/pyright).

Backend: <span className="color--primary">`pants.backend.experimental.python.typecheck.pyright`</span>

Config section: <span className="color--primary">`[pyright]`</span>

<span className={styles.options}>

## Basic options

### `skip`

<Option
  cli_repr={`--[no-]pyright-skip`}
  env_repr='PANTS_PYRIGHT_SKIP'
  toml_repr={`[pyright]
skip = <bool>`}
  default_repr={`False`}
>

If true, don&#x27;t use Pyright when running `pants check`.

</Option>

### `args`

<Option
  cli_repr={`--pyright-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr='PANTS_PYRIGHT_ARGS'
  toml_repr={`[pyright]
args = [
    <shell_str>,
    <shell_str>,
    ...,
]`}
  default_repr={`[]`}
>

Arguments to pass directly to Pyright, e.g. `--pyright-args='--version'`.

</Option>

## Advanced options

### `version`

<Option
  cli_repr={`--pyright-version=<str>`}
  env_repr='PANTS_PYRIGHT_VERSION'
  toml_repr={`[pyright]
version = <str>`}
  default_repr={`pyright@1.1.316`}
>

Version string for the tool in the form package@version (e.g. prettier@2.6.2)

</Option>

### `install_from_resolve`

<Option
  cli_repr={`--pyright-install-from-resolve=<str>`}
  env_repr='PANTS_PYRIGHT_INSTALL_FROM_RESOLVE'
  toml_repr={`[pyright]
install_from_resolve = <str>`}
  default_repr={`None`}
>

If specified, install the tool using the lockfile for this named resolve, instead of the version configured in this subsystem.

If unspecified, the tool will use the default configured package manager [nodejs].package_manager`, and install the tool without a lockfile.

</Option>

### `interpreter_constraints`

<Option
  cli_repr={`--pyright-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr='PANTS_PYRIGHT_INTERPRETER_CONSTRAINTS'
  toml_repr={`[pyright]
interpreter_constraints = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "CPython>=3.7,<4"\n]`}
>

Python interpreter constraints for Pyright (which is, itself, a NodeJS tool).

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
